--- a/src/main__features.scss
+++ b/src/main__features.scss
@@ -16,10 +16,13 @@
 
     &__imgOne {
         width: 100vw;
+        height: auto;
+        max-width: 100vw;
         object-fit: cover;
         
         @include breakpoint($small) {
             width: 50vw;
+            max-width: 50vw;
         }
 
         @include breakpoint($large) {
@@ -29,10 +32,13 @@
     
     &__imgTwo {
         width: 100vw;
+        max-width: 100vw;
+        height: auto;
         object-fit: cover;
 
         @include breakpoint($small) {
             width: 50vw;
+            max-width: 50vw;
         }
 
         @include breakpoint($large) {
